[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/fonts/pixeled/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/1up.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/images/stageborderaaaa.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 5
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 17
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 4
outline_color = Color( 0.105882, 0.243137, 0.0705882, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 17
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 8
outline_color = Color( 1, 0.4, 0.105882, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="Node2D"]
script = ExtResource( 2 )

[node name="Display" type="CanvasLayer" parent="."]

[node name="fog1" type="ColorRect" parent="Display"]
visible = false
margin_right = 792.0
margin_bottom = 811.0
color = Color( 0.223529, 0.160784, 0.160784, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fog2" type="ColorRect" parent="Display"]
visible = false
margin_right = 792.0
margin_bottom = 811.0
color = Color( 0.196078, 0.180392, 0.180392, 0.811765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="TextureRect" parent="Display"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -232.0
margin_bottom = 708.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCORE" type="Label" parent="Display"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -312.0
margin_right = -148.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="isuckkk" type="Label" parent="Display"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -312.0
margin_right = -148.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="LIVES" type="Label" parent="Display"]
margin_left = 12.728
margin_top = 9.89949
margin_right = 133.728
margin_bottom = 77.8995
custom_colors/font_color = Color( 0.690196, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "Lives: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DIFF" type="Label" parent="Display"]
margin_left = 7.65686
margin_top = 70.7107
margin_right = 299.657
margin_bottom = 126.711
custom_colors/font_color = Color( 0.729412, 0.403922, 0.129412, 1 )
custom_fonts/font = SubResource( 3 )
text = "Difficulty: Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KILL" type="Label" parent="Display"]
margin_left = 852.738
margin_top = 625.761
margin_right = 1058.74
margin_bottom = 721.761
custom_fonts/font = SubResource( 4 )
text = "Killed: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MAX" type="Label" parent="Display"]
margin_left = 850.283
margin_top = 562.495
margin_right = 1070.28
margin_bottom = 632.495
custom_fonts/font = SubResource( 5 )
text = "Max Kills: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1up" type="AudioStreamPlayer" parent="Display"]
stream = ExtResource( 4 )

[node name="canon" type="Label" parent="Display"]
margin_left = 819.112
margin_top = 434.393
margin_right = 1023.11
margin_bottom = 490.393
custom_fonts/font = SubResource( 6 )
text = "Canon: Basic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="char" type="Label" parent="Display"]
margin_left = 816.169
margin_top = 94.494
margin_right = 999.169
margin_bottom = 143.494
custom_colors/font_color = Color( 0.317647, 0.878431, 0.811765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Shooter-bot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed" type="Label" parent="Display"]
margin_left = 849.703
margin_top = 361.433
margin_right = 978.703
margin_bottom = 412.433
custom_fonts/font = SubResource( 8 )
text = "Speed: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fogtimer" type="Timer" parent="Display"]
process_mode = 0
wait_time = 0.5

[node name="fogtimer2" type="Timer" parent="Display"]
process_mode = 0
wait_time = 0.5

[connection signal="timeout" from="Display/fogtimer" to="." method="_on_fogtimer_timeout"]
[connection signal="timeout" from="Display/fogtimer2" to="." method="_on_fogtimer2_timeout"]
